results/SVCOMP/4-shot/log-ExSymExeI2F-2024_03_18_21_47_19.txt
class Main {

  //@ requires x != 3 && x != 0;
  //@ ensures \result == true;
  public static boolean f(int x) {
    if (x != 3 && x != 0)
      return true;

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x != 3 && x != 0;
  //@ ensures \result == true <==> res > 0;
  public boolean test(int x) {
    float res = (float) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2F.java:14: error: cannot find symbol
  //@ ensures \result == true <==> res > 0;
                                   ^
  symbol:   variable res
  location: class Main
1 error

